# MigRender

./: .gitignore  MigRender.sln  README.md
core/: android.cpp  android.h  anim.cpp  anim.h  animmanage.cpp  animmanage.h  background.cpp  background.h  baseobject.cpp  baseobject.h  bbox.cpp  bbox.h  bmpio.cpp  bmpio.h  camera.cpp  camera.h  core.vcxproj  core.vcxproj.filters  defines.h  extrude.cpp  fileio.cpp  fileio.h  filestructs.h  group.cpp  group.h  image.cpp  image.h  jpegio.cpp  jpegio.h  lights.cpp  lights.h  matrix.cpp  matrix.h  migexcept.h  migutil.cpp  migutil.h  model.cpp  model.h  object.cpp  object.h  (+17 more)
core-ext/: core-ext.vcxproj  core-ext.vcxproj.filters  envvars.cpp  envvars.h  jsonio.cpp  jsonio.h  parser.cpp  parser.h  parser2.cpp  parser2.h  targets.cpp  targets.h
core-ext/gl/: oglbackground.cpp  oglbackground.h  oglcommon.cpp  oglcommon.h  ogllight.cpp  ogllight.h  oglobject.cpp  oglobject.h  oglprogram.cpp  oglprogram.h  oglrender.cpp  oglrender.h
lib/glew/: .gitignore
lib/jpeglib/: jpeglib.vcxproj  rdjpgcom.c
lib/jsoncpp/: jsoncpp.vcxproj  jsoncpp.vcxproj.filters
lib/libpng/: libpng.vcxproj  libpng.vcxproj.filters
lib/zlib/: zlib.vcxproj  zlib.vcxproj.filters
pkgmaker/: CreateThread.cpp  CreateThread.h  PackageMaker.cpp  PackageMaker.rc  Reg.cpp  Reg.h  backdrop-frame.txt  backdrop-metal.txt  backdrop-slab.txt  backdrop-smoothslab.txt  batch.cfg  light-many.txt  light-single.txt  pkgmaker.vcxproj  resource.h
pkgview/: PackageViewer.cpp  PackageViewer.rc  PackageViewer.vcxproj  Reg.cpp  RendBitmap.cpp  RendBitmap.h  RendThread.cpp  RendThread.h  batch.cfg  batch_orient1.txt  batch_orient2.txt  font_accent.txt  font_complex1.txt  font_complex2.txt  font_metal.txt  font_simple.txt  font_test.txt  orient.txt  pkgview.vcxproj  resource.h  setup.txt  stdafx.h
runner/: bg.vs  bitmaptarget.cpp  bitmaptarget.h  runner.cpp  runner.vcxproj  runner.vcxproj.filters  shaders.cpp
scripts/: backdrop-slab.txt  fade-fog.txt  framed-earth.txt  gl-test.txt  glass-panel.txt  glyph-bevel.txt  glyph-none.txt  glyph-simple.txt  glyph-test.txt  lights-single.txt  load-text.txt  movie-anim-basic.json  movie-anim-slab.json  movie-basic.txt  movie-earth.txt  movie-jodi.txt  movie-letter.txt  movie-test.txt  setup.txt
testapp/: GLTest.cpp  GLTest.h  Reg.cpp  Reg.h  RendBitmap.cpp  RendBitmap.h  RendThread.cpp  RendThread.h  TestApp.cpp  TestApp.rc  backdrop-slab.txt  bg.fs  commands.txt  fade-fog.txt  framed-earth.txt  gl-test.txt  glass-panel.txt  glyph-simple.txt  glyph-test.txt  lights-many.txt  load-text.txt  movie-anim-fade.json  movie-anim-fog.json  movie-anim-slide.json  movie-anim-text.json  movie-basic.txt  movie-earth.txt  movie-jodi.txt  movie-test.txt  refract-test.txt  resource.h  script.txt  setup.txt  test.fs  test.vs  testapp.vcxproj
textrender/android/: settings.gradle
textrender/android/app/: build.gradle
textrender/android/app/src/main/: AndroidManifest.xml
textrender/android/app/src/main/cpp/: CMakeLists.txt  miggy.cpp
textrender/android/app/src/main/res/drawable/: ic_baseline_check_circle_24.xml  shape_button_rounded.xml
textrender/android/app/src/main/res/drawable-v24/: shape_grey_rectangle.xml
textrender/android/app/src/main/res/layout/: activity_background.xml  activity_main.xml  activity_options.xml  activity_render.xml  fragment_background.xml  fragment_main.xml  (+5 more)
textrender/android/app/src/main/res/layout-large-land/: activity_background.xml  activity_main.xml  activity_options.xml  fragment_main.xml
textrender/android/gradle/wrapper/: gradle-wrapper.properties
textrender/windows/: TextRender.sln
textrender/windows/MiggyRT/MiggyRT.Shared/: MiggyRT.Shared.vcxitems  MiggyRT.Shared.vcxitems.filters  MiggyRender.cpp  MiggyRender.h  MiggySurface.cpp  MiggySurface.h
textrender/windows/MiggyRT/MiggyRT.Windows/: MiggyRT.Windows.vcxproj
textrender/windows/MiggyRT/MiggyRT.WindowsPhone/: MiggyRT.WindowsPhone.vcxproj
textrender/windows/TextRender/TextRender.Shared/: App.xaml  App.xaml.cs  MiggyParams.cs  TextRender.Shared.projitems  TextRender.Shared.shproj
textrender/windows/TextRender/TextRender.Windows/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RenderSettingsFlyout.xaml  RenderSettingsFlyout.xaml.cs  TextRender.Windows.csproj  TextRender.Windows_TemporaryKey.pfx
textrender/windows/TextRender/TextRender.Windows/Properties/: AssemblyInfo.cs
textrender/windows/TextRender/TextRender.WindowsPhone/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RenderPage.xaml  RenderPage.xaml.cs  RenderSettings.xaml  RenderSettings.xaml.cs  TextRender.WindowsPhone.csproj
textrender/windows/TextRender/TextRender.WindowsPhone/Common/: NavigationHelper.cs  ObservableDictionary.cs  RelayCommand.cs  SuspensionManager.cs
textrender/windows/TextRender/TextRender.WindowsPhone/Properties/: AssemblyInfo.cs
(+27 files in other folders)
